Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/Neg16.out
Neg16.java:11:23: compiler.err.illegal.default.super.call: Neg16.I, (compiler.misc.redundant.supertype: Neg16.I, Neg16.J)
1 error
